samples/_failures_safe/1761506310_7fddf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_278da549.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_278da549.c:174:9: error: expected expression at end of input
  174 |         printf("Buffer: %s\n",
      |         ^~~~~~
./samples/SAFE/__tmp_278da549.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_278da549.c:174:9: error: expected declaration or statement at end of input
